# tools_robin

open_door_detector/: CMakeLists.txt  package.xml
open_door_detector/launch/: kinect.rviz  open_door_detector.launch
open_door_detector/src/: .detect_open_door.cpp.kate-swp  .kdev_include_paths  detect_open_door.cpp
open_door_detector/srv/: detect_open_door.srv
robin_people_detection/: CMakeLists.txt  package.xml
robin_people_detection/launch/: kinect.rviz  robin_people_detection.launch
robin_people_detection/src/: .kdev_include_paths  robin_people_detection.cpp
sensorhand_speed/: CMakeLists.txt  launch  package.xml
sensorhand_speed/msg/: hand_dump.msg
sensorhand_speed/src/: hand_node.cpp
sensorhand_speed/srv/: hand_cmd.srv
video_player/: CMakeLists.txt  package.xml
video_player/data/Video1/: openVideo.sh
video_player/launch/: video_player.launch
video_player/src/: test_client.cpp  video_player_node.cpp
video_player/srv/: PlayVideoSrv.srv
