<?xml version="1.0"?>
<package>
  <name>sensorhand_speed</name>
  <version>0.5.0</version>
  <description>ROS driver package for the Otto Bock SensorHand Speed prosthetics device.</description>

  <author email="ros@dualspace.at">Alexander Reiter</author>
  <maintainer email="ros@dualspace.at">Alexander Reiter</maintainer>
  <maintainer email="joh.mayr@jku.at">Johannes Mayr</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cereal_port</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
