<?xml version="1.0"?>
<package>
  <name>video_player</name>
  <version>0.0.1</version>
  <description>Video_player package to play/stream a video with "gscam".</description>

  <maintainer email="t.keplinger@gmx.at">Thomas Keplinger</maintainer>
  <maintainer email="lukas_schwarz@gmx.at">Lukas Schwarz</maintainer>
  <author email="t.keplinger@gmx.at">Thomas Keplinger</author>
  <author email="lukas_schwarz@gmx.at">Lukas Schwarz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gscam</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gscam</run_depend>
  <run_depend>message_generation</run_depend>

</package>
